<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fundo"
    tools:context=".telasFornecedor.CadastroProdutoActivity">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="340dp"
        android:layout_height="62dp"
        android:fontFamily="@font/bevan"
        android:gravity="center"
        android:text="@string/produto"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="75dp"
        android:layout_height="74dp"
        app:layout_constraintEnd_toStartOf="@+id/textView8"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/ptPreco"
        android:layout_width="85dp"
        android:layout_height="54dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/ptQuantidade"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toEndOf="@+id/ptQuantidade" />

    <EditText
        android:id="@+id/ptQuantidade"
        android:layout_width="85dp"
        android:layout_height="54dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.263"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.292" />

    <Button
        android:id="@+id/button6"
        android:layout_width="70dp"
        android:layout_height="66dp"
        android:layout_marginBottom="16dp"
        android:background="@android:drawable/checkbox_on_background"
        android:onClick="cadastra"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/corBotao"
        android:onClick="volta"
        android:text="@string/voltar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="59dp"
        android:layout_height="21dp"
        android:text="@string/quantidade"
        app:layout_constraintBottom_toTopOf="@+id/ptQuantidade"
        app:layout_constraintStart_toStartOf="@+id/ptQuantidade" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preco"
        app:layout_constraintBottom_toTopOf="@+id/ptPreco"
        app:layout_constraintStart_toStartOf="@+id/ptPreco" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descricao"
        app:layout_constraintBottom_toTopOf="@+id/ptDescr"
        app:layout_constraintStart_toStartOf="@+id/ptDescr" />

    <EditText
        android:id="@+id/ptDescr"
        android:layout_width="250dp"
        android:layout_height="178dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ptPreco" />

</androidx.constraintlayout.widget.ConstraintLayout>